--- a/index.html
+++ b/index.html
@@ -5,39 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>git-repo-updater</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="main">
-        <h1>Git Repo Updater!</h1>
-        <div>
-            <h2>Choose local folder:</h2>
-            <input id="local-path"></input>
-            <button id="directory">Choose</button>
+        <div class="ct-title">
+            <h1>Git Repo Updater!</h1>
+        </div>
+        <hr>
+        <div class="container">
+            <h3>Choose local folder:</h3>
+            <div class="field">
+                <input id="local-path"></input>
+                <button id="directory">Choose</button>
+            </div>
         </div>
 
-        <div>
+
+        <div class="container">
             <h3>Actions:</h3>
-            <form>
+            <div id="actions">
                 <div>
                     <input type="radio" id="clone-rd" name="option" checked/>
                     <label for="clone-rd">Clone</label>
                 </div>
-    
                 <div>
                     <input type="radio" id="update-rd" name="option" />
                     <label for="update-rd">Update</label>
                 </div>
-            </form>
+            </div>
         </div>
 
-        <div id="clone-container">
-            <h3>Git Repo URL:</h3>
-            <input id="git_url" type="text">
-            <button id="clone">Clone!</button>
+        <hr>
+
+        <div id="clone-container" class="container">
+            <div class="ct-title">
+                <h2>Clone</h2>
+            </div>
+            <div class="field">
+                <h3>Git Repo Url:</h3>
+                <input id="git_url" type="text">
+            </div>
+            <div class="main-bt">
+                <button id="clone">Clone!</button>
+            </div>
         </div>
 
-        <div id="update-container" hidden>
-            <button id="update">Update!</button>
+        <div id="update-container" class="container" hidden>
+            <div class="ct-title">
+                <h2>Update (Pull)</h2>
+            </div>
+            <div class="main-bt">
+                <button id="update">Update!</button>
+            </div>
         </div>
        
     </div>
