--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
         <div class="container">
             <h3>Choose local folder:</h3>
             <div class="field">
-                <input id="local-path"></input>
+                <input id="local-path"/>
                 <button id="directory">Choose</button>
             </div>
         </div>
-
 
         <div class="container">
             <h3>Actions:</h3>
